# dbt-redshift

./: .bumpversion.cfg  .changie.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  dev_requirements.txt  hatch.toml  prev-CHANGELOG.md  pyproject.toml  pytest.ini  setup.py  test.env.example  tox.ini
.changes/: 0.0.0.md  1.0.0.md  1.0.1.md  1.1.0.md  1.2.0.md  1.2.1-rc1.md  1.2.1-rc2.md  1.2.1.md  1.3.0-b1.md  1.3.0-b2.md  1.3.0-rc1.md  1.3.0-rc2.md  1.3.0.md  1.3.1.md  1.4.0-a1.md  1.4.0-b1.md  1.4.0-rc1.md  1.4.0.md  1.4.1.md  1.5.0-a1.md  1.5.0-b1.md  1.5.0-b2.md  1.5.0-b3.md  1.5.0-b4.md  1.5.0-rc1.md  1.5.0.md  1.5.1.md  1.5.10.md  1.5.11.md  1.5.12.md  1.5.13.md  1.5.2.md  1.5.3.md  1.5.4.md  1.5.5.md  1.5.6.md  1.5.7.md  1.5.8.md  1.5.9.md  1.6.0-a1.md  (+39 more)
.changes/1.2.1/: Features-20220810-134336.yaml  Under the Hood-20220818-122011.yaml
.changes/1.3.0/: Dependency-20220902-144636.yaml  Features-20220912-223245.yaml  Under the Hood-20220808-154422.yaml  Under the Hood-20220913-143919.yaml
.changes/1.4.0/: Dependency-20220920-200053.yaml  Under the Hood-20221219-163610.yaml  Under the Hood-20230110-100647.yaml
.changes/1.5.0/: Features-20221209-105640.yaml  Features-20230127-155317.yaml  Features-20230406-104634.yaml  Fixes-20230316-132120.yaml  Fixes-20230411-143706.yaml  Under the Hood-20230118-071542.yaml  Under the Hood-20230223-110314.yaml
.changes/1.6.0/: Breaking Changes-20230522-111945.yaml  Breaking Changes-20230530-165542.yaml  Breaking Changes-20230614-144743.yaml  Dependencies-20230421-032407.yaml  Dependencies-20230515-195952.yaml  Dependencies-20230605-195944.yaml  Features-20230330-165842.yaml  Features-20230604-041410.yaml  Features-20230622-144649.yaml  Features-20230714-160100.yaml  Fixes-20230508-094834.yaml  Fixes-20230509-143721.yaml  Fixes-20230512-082027.yaml  Fixes-20230520-043039.yaml  Fixes-20230524-151825.yaml  Fixes-20230524-165236.yaml  Fixes-20230531-153347.yaml  Fixes-20230608-180130.yaml  Fixes-20230612-114853.yaml  Fixes-20230706-001056.yaml  Fixes-20230706-012233.yaml  Fixes-20230706-123329.yaml  Under the Hood-20230511-162623.yaml
.changes/1.7.0/: Dependencies-20230803-131633.yaml  Dependencies-20230810-193150.yaml  Dependencies-20230811-195421.yaml  Dependencies-20230816-195425.yaml  Dependencies-20230816-195442.yaml  Dependencies-20230901-230919.yaml  Features-20230803-111146.yaml  Features-20230921-153707.yaml  Fixes-20230807-174409.yaml  Fixes-20230815-151655.yaml  Fixes-20230912-133327.yaml  Under the Hood-20230808-141645.yaml
.changes/1.8.0/: Dependencies-20230912-120620.yaml  Dependencies-20231009-192801.yaml  Dependencies-20231013-190517.yaml  Dependencies-20231027-173152.yaml  Dependencies-20231030-193514.yaml  (+14 more)
.github/: dependabot.yml  pull_request_template.md
dbt-redshift/: CONTRIBUTING.md  README.md  hatch.toml  pyproject.toml  test.env.example
dbt-redshift/.changes/: 0.0.0.md  header.tpl.md
dbt-redshift/.changes/unreleased/unreleased/: Features-20241217-181340.yaml  Under the Hood-20241211-145132.yaml
dbt-redshift/docker/: Dockerfile
dbt-redshift/scripts/: env-setup.sh  update_dependencies.sh
dbt-redshift/src/dbt/adapters/redshift/: __init__.py  auth_providers.py  connections.py  relation.py  utility.py
dbt-redshift/src/dbt/adapters/redshift/relation_configs/: sort.py
dbt-redshift/src/dbt/dbt/include/redshift/macros/adapters/: apply_grants.sql
dbt-redshift/src/dbt/dbt/include/redshift/macros/relations/materialized_view/: refresh.sql
dbt-redshift/src/dbt/dbt/include/redshift/macros/utils/: listagg.sql
dbt-redshift/src/dbt/include/include/redshift/macros/utils/: array_append.sql
dbt-redshift/src/dbt/include/redshift/: dbt_project.yml
dbt-redshift/src/dbt/include/redshift/macros/: relations.sql
dbt-redshift/src/dbt/include/redshift/macros/adapters/: unit_testing.sql
dbt-redshift/src/dbt/include/redshift/macros/catalog/: catalog.sql
dbt-redshift/src/dbt/include/redshift/macros/materializations/: incremental_merge.sql  snapshot_merge.sql  view.sql
dbt-redshift/src/dbt/include/redshift/macros/materializations/seeds/: helpers.sql
dbt-redshift/src/dbt/include/redshift/macros/relations/materialized_view/: alter.sql  describe.sql
dbt-redshift/src/dbt/include/redshift/macros/relations/table/: rename.sql
dbt-redshift/src/dbt/include/redshift/macros/relations/view/: drop.sql  rename.sql
dbt-redshift/src/dbt/include/redshift/macros/utils/: array_construct.sql  dateadd.sql
dbt-redshift/tests/: conftest.py
dbt-redshift/tests/boundary/: test_redshift_connector.py
dbt-redshift/tests/functional/: test_auth_method.py  test_columns_in_relation.py
dbt-redshift/tests/functional/adapter/: conftest.py  test_relation_name.py  test_simple_seed.py
dbt-redshift/tests/functional/adapter/backup_tests/: models.py
dbt-redshift/tests/functional/adapter/catalog_tests/: files.py  test_get_catalog.py
dbt-redshift/tests/functional/adapter/dbt_clone/: test_dbt_clone.py
dbt-redshift/tests/functional/adapter/incremental/: test_incremental_run_result.py  test_incremental_unique_id.py
dbt-redshift/tests/functional/adapter/materialized_view_tests/: test_drop_cascade.py  utils.py
dbt-redshift/tests/functional/adapter/unit_testing/: fixtures.py
dbt-redshift/tests/functional/adapter/utils/: test_timestamps.py
dbt-redshift/tests/tests/functional/: test_autocommit.py
dbt-redshift/tests/tests/functional/adapter/: expected_stats.py  test_basic.py  test_grants.py  test_macros.py
dbt-redshift/tests/tests/functional/adapter/incremental/: test_incremental_strategies.py
dbt-redshift/tests/tests/functional/adapter/materialized_view_tests/: __init__.py
dbt-redshift/tests/unit/: test_connection.py  test_materialized_view.py  test_ssl_mode.py  utils.py
dbt-tests-adapter/: .gitrepo  README.md  setup.py
dbt_redshift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: Dockerfile  README.md  dev.Dockerfile  test.sh
scripts/: build-dist.sh  env-setup.sh
tests/: conftest.py  test_incremental_run_result.py
(+510 files in other folders)
