[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dbt-redshift"
description = "The Redshift adapter plugin for dbt"
readme = "README.md"
keywords = ["dbt", "adapter", "adapters", "database", "elt", "dbt-core", "dbt Core", "dbt Cloud", "dbt Labs", "redshift", "aws", "amazon", "amazon web services"]
requires-python = ">=3.9.0"
authors = [{ name = "dbt Labs", email = "info@dbtlabs.com" }]
maintainers = [{ name = "dbt Labs", email = "info@dbtlabs.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dbt-common>=1.10,<2.0",
    "dbt-adapters>=1.11,<2.0",
    "dbt-postgres>=1.8,<1.10",
    # dbt-redshift depends deeply on this package. it does not follow SemVer, therefore there have been breaking changes in previous patch releases
    # Pin to the patch or minor version, and bump in each new minor version of dbt-redshift.
    "redshift-connector<2.1.1,>=2.0.913,!=2.0.914",
    # add dbt-core to ensure backwards compatibility of installation, this is not a functional dependency
    "dbt-core>=1.8.0b3",
    # installed via dbt-core but referenced directly; don't pin to avoid version conflicts with dbt-core
    "sqlparse>=0.5.0,<0.6.0",
    "agate",
]

[project.urls]
Homepage = "https://github.com/dbt-labs/dbt-redshift"
Documentation = "https://docs.getdbt.com"
Repository = "https://github.com/dbt-labs/dbt-redshift.git"
Issues = "https://github.com/dbt-labs/dbt-redshift/issues"
Changelog = "https://github.com/dbt-labs/dbt-redshift/blob/main/CHANGELOG.md"

[tool.mypy]
mypy_path = "third-party-stubs/"

[tool.pytest.ini_options]
testpaths = ["tests/functional", "tests/unit"]
env_files = ["test.env"]
addopts = "-v --color=yes -n auto"
filterwarnings = [
    "ignore:.*'soft_unicode' has been renamed to 'soft_str'*:DeprecationWarning",
    "ignore:unclosed file .*:ResourceWarning",
]
